<resources>
    <string name="app_name">HBase</string>

    <string name="picker_time">时间选择器</string>
    <string name="picker_options">条件选择器</string>
    <string name="picker_province">省市区选择器</string>
    <string name="cancel">取消</string>
    <string name="OK">好的</string>

    <string name="dialog_basic">Basic</string>
    <string name="dialog_basic_no_title">Basic(No Title)</string>
    <string name="dialog_basic_icon">Basic(Icon)</string>
    <string name="dialog_basic_checkbox">Basic(CheckBox)</string>
    <string name="dialog_title">标题</string>

    <string name="basic_list">Basic List</string>
    <string name="basic_list_no_title">Basic List(No Title)</string>
    <string name="basic_list_long">Basic List(Long)</string>
    <string name="basic_list_long_items">Basic List(Long Items)</string>
    <string name="basic_list_long_press">Basic List(Long Press)</string>
    <string name="single_choice">Single Choice</string>
    <string name="input">Input</string>
    <string name="progress">Progress</string>


</resources>
